darkmap/front/static_front/galaxy.css
/* ... */
menu- .top {
    margin-top: 5px;
}

menu- .bottom {
    margin-bottom: 5px;
}


centeralizer- {
    height: 100%;
    width: 100%;
    position: absolute;
}

system- {
    position: absolute;
    height: 1vh;
    width: 1vh;
    margin-top: -0.5vh;
    margin-left: -0.5vh;
    border-color: white;
}

.jumphole {
    position: absolute;
    height: 1.5em;
    width: 1.5em;
    margin-top: -0.75em;
    margin-left: -0.75em;
    border-color: white;
}

.tradelane {
    position: absolute;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
    border-color: white;
}

.zoomedOut .tradelane img {
    visibility: hidden;
}

.zoomedOut .tradelane {
    background: gray;
    height: 0.2em;
    width: 0.3em;
    margin-top: -0.1em;
    margin-left: -0.15em;
}

.zoomedOut .base img {
    visibility: hidden;
}

.zoomedOut .base {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: white;
}

.zoomedOut .playerbase {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: var(--playerbase_color);
}

.zoomedOut .mining,
.zoomedIn .mining {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: var(--mining_color);
}

.star {
    border-color: white;
    border-radius: 50%;
}

.base {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
}

.playerbase {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
}

.mining {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
}

.planet {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
    border-radius: 50%;
}

.wreck {
    width: 0.8em;
    height: 0.8em;
    margin-top: -0.2em;
    margin-left: -0.2em;
}

.obj_other,
.obj_noname,
.obj_disco_encounter {
    width: 0.4em;
    height: 0.4em;
    margin-top: -0.2em;
    margin-left: -0.2em;
}

.zoomedOut .obj_other.icon_mixed {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: var(--obj_other_color);
}

.zoomedOut .obj_noname.icon_mixed {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: var(--obj_noname_color);
}

.zoomedOut .obj_disco_encounter {
    height: 0.5em;
    width: 0.5em;
    margin-top: -0.5em;
    margin-left: -0.5em;
    background: rgba(255, 106, 6, 0.9);
    box-shadow: 0em 0em 0.4em 0.2em rgba(255, 106, 6, 0.5);
}

.zoomedOut .obj_other.icon_mixed img,
.zoomedOut .obj_disco_encounter img {
    visibility: hidden;
}

.zoomeIn .obj_noname img {
    box-shadow: 0em 0em 0.4em 0.2em rgba(234, 250, 146, 0.5);
}

.zoomedOut .obj_noname.icon_mixed img {
    display: none;
}

.obj_other img,
.obj_disco_encounter img {
    width: 100%;
    height: 100%;
}


.planet img {
    border-radius: 50%;
}

.jumphole,
.base,
.playerbase,
.mining {
    z-index: 100;
}

.tradelane,
.star,
.planet,
.wreck {
    z-index: 99;
}

.obj_disco_encounter {
    z-index: 101;
}

obj- {
    position: absolute;
    cursor: pointer;
}

obj- img {
    width: 100%;
    height: 100%;
    position: absolute;
}

system-:hover,
obj-:hover {
    box-shadow: 0em 0em 0.4em 0.2em rgb(237, 112, 7), inset 0em 0em 0.15em 0em rgb(237, 112, 7) !important;
    color: rgb(255, 167, 6);
}

.is-target {
    display: block !important;
    animation: pulse-entrance 3s ease-out forwards;
}

.is-target.pulse-normal {
    animation: pulse 1.5s infinite;
}

@keyframes pulse-entrance {
    0% {
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 1);
    }

    50% {
        box-shadow: 0 0 0 30vh rgba(204, 169, 44, 0);
    }

    100% {
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 1);
    }
}

@-webkit-keyframes pulse {
    0% {
        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
    }

    70% {
        -webkit-box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
    }

    100% {
        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
    }
}

@keyframes pulse {
    0% {
        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
    }

    70% {
        -moz-box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
        box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
    }

    100% {
        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
    }
}

system-:hover system-label,
obj-:hover system-label {
    background-color: rgba(0, 0, 0, 0.45);
    border-radius: 0.2em;

    box-shadow: 0em 0em 0.4em 0.2em rgb(237, 112, 7), inset 0em 0em 0.15em 0em rgb(237, 112, 7);
    color: rgb(255, 167, 6);
}

@media (pointer: coarse) {

    /*Disabling for touch screens*/
    obj-:hover,
    system-:hover,
    system-:hover system-label,
    obj-:hover system-label {
        -webkit-tap-highlight-color: transparent;
    }
}

.playerbase system-label {
    color: var(--playerbase_color);
}

.playerbase system-label.pob_dockable {
    color: var(--playerbase_dockable_color);
}

ul.text_align_left * {
    text-align: left;
}

.mining system-label {
    color: var(--mining_color);
}

.atmosphere {
    border-radius: 50%;
    border: 1px solid rgba(255, 255, 0, 0.3);
    z-index: -1;
    box-sizing: border-box;
}

.zoomedOut .jumphole img {
    visibility: hidden;
}

.zoomedOut .jumphole {
    background: var(--jh_color_jumphole);
}

.zoomedOut .jumphole.jh_jumpgate {
    background: var(--jh_color_jumpgate);
}

.zoomedOut .jumphole.jh_unstable_cargo_limit {
    background: var(--jh_color_unstable_cargo_limit);
}

.zoomedOut .jumphole.jh_fighter_only {
    background: var(--jh_color_freighter_only);
}

.zoomedOut .jumphole.jh_alien {
    background: var(--jh_color_alien);
}
/* ... */

